pol/static/css/main.css
.content {
    padding-top: 8px;
}

.navbar {
    background: #161616;
    padding-left: 8px;
}

.navbar a {
    color: #fcfcfc;
    background-color: inherit;
}

.navbar li > a:hover {
    background-color: #222222;
}

.sidebar {
}

.filterform {
}

.filterform .errorlist {
    display: none;
}

#table table {
    margin-bottom: 0;
}

.pagination-nav .pagination {
    margin: 0;
}

#produktinfo {
    padding: 0;
    border: 0;
}

.produkt {
    cursor: pointer;
    max-height: 1px;
    overflow: hidden;
}

.produkt td {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.varenavn-td {
    max-width: 300px;
}

.produkt:hover td {
    background-color: white;
    white-space: normal;
}

.produktdiv {
    display: none;
    padding: 8px;
}

.produktdiv span {
    margin-left: 16px;
}

.vinmonopolet {
    float: right;
}

.clear_both {
    clear: both;
}

.tablesort {
    cursor: pointer;
    white-space: nowrap;
}

#sorteringsform {
}

#kart {
    height: 358px;
    border-radius: 4px;
    overflow: hidden;
    margin-bottom: 8px;
}

.maxheight {
    height: 100%;
}

#varetypebeholder {
    padding: 0;
}

.form-label {
    width: 7em;
}

#kartknapp {

}

#velgbutikk {
    width: 100%;
}

.input-group {
    width: 100%;
    margin-bottom: 8px;
}

.tofelts .form-control {
    width: 50%;
}

.varetype {
    width: 50%;
    margin: 0;
    overflow: hidden;
}

.pagination li a {
    width: 3em;
    text-align: center;
}

.pagination-nav {
    text-align: center;
}

@media (max-width: 1200px) and (min-width: 991px) {
    .varenavn-td {
        max-width: 200px;
    }

    .varetype-td {
        max-width: 100px;
    }
}

@media (max-width: 768px ) {

    .varenavn-td {
        max-width: 200px;
    }

}

